--- a/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
@@ -108,45 +108,51 @@ display_params()
     display_backend_optional_params_$BACKEND_TYPE
 
     update_sanity
+    METADATA_REPLICATION_YN=`tf2yn $METADATA_REPLICATION`
+    echo "metadata replication       [-r]: $METADATA_REPLICATION_YN"
     if $METADATA_REPLICATION; then
-        METADATA_REPLICATION_YN=`tf2yn $METADATA_REPLICATION`
-        echo "metadata replication       [-r]: $METADATA_REPLICATION_YN"
         echo "metadata journal directory [-j]: $METADATA_JOURNAL_DIR"
     fi
-
     exit 0
 }
 
 update_metadata_replication()
 {
-    if $MAKE_METADATA_JOURNAL_DIR; then
-        if [ -e "$METADATA_JOURNAL_DIR/0000000000.gmj" ]; then
-            echo >&2 "journal file already exists in $METADATA_JOURNAL_DIR."
-        else
-            [ -d $METADATA_JOURNAL_DIR ] || mkdir -p $METADATA_JOURNAL_DIR
-            [ -e $METADATA_JOURNAL_DIR ] && chmod 700 $METADATA_JOURNAL_DIR
-            echo "metadb_journal_dir $METADATA_JOURNAL_DIR" >> $GFMD_CONF
-	fi
+    if [ $METADATA_REPLICATION ]; then
+        if [ ! $METADATA_REPLICATION1 ]; then
+            if [ -e "$METADATA_JOURNAL_DIR/0000000000.gmj" ]; then
+                echo >&2 "journal file already exists in $METADATA_JOURNAL_DIR."
+                exit 1
+            fi
+        fi
+        [ -d $METADATA_JOURNAL_DIR ] || mkdir -p $METADATA_JOURNAL_DIR
+        [ -e $METADATA_JOURNAL_DIR ] && chmod 700 $METADATA_JOURNAL_DIR
+    fi
+
+    if [ "$METADATA_REPLICATION_ED1" = "" ]; then
+        echo "metadb_replication $METADATA_REPLICATION_ED" >> $GFMD_CONF
+    fi
+    if [ "$METADATA_JOURNAL_DIR1" = "" ]; then
+        echo "# mkdir following directory when metadb_replication is set to enable." >> $GFMD_CONF
+        echo "metadb_journal_dir $METADATA_JOURNAL_DIR" >> $GFMD_CONF
     fi
 }
 
 update_first_set_param()
 {
-    if [ ! $METADATA_REPLICATION ]; then
-        : ${METADATA_REPLICATION_ED=`getvalue metadb_replication`}
-        if [ "$METADATA_REPLICATION_ED" = "enable" ]; then
-            METADATA_REPLICATION0=true
-        else
-            METADATA_REPLICATION0=false
-        fi
-        METADATA_REPLICATION=$METADATA_REPLICATION0
+    : ${METADATA_REPLICATION_ED1=`getvalue metadb_replication`}
+    if [ "$METADATA_REPLICATION_ED1" = "enable" ]; then
+        METADATA_REPLICATION=true
+        METADATA_REPLICATION1=true
+        METADATA_REPLICATION_ED=enable
+    else
+        METADATA_REPLICATION1=false
     fi
 
-    if $METADATA_REPLICATION; then
-        : ${METADATA_JOURNAL_DIR=`getvalue metadb_journal_dir`}
-        : ${METADATA_JOURNAL_DIR:="$METADATA_JOURNAL_DIR0"}
-        : ${METADATA_JOURNAL_DIR:="/var/gfarm-metadata/journal"}
-    fi
+    METADATA_JOURNAL_DIR1=`getvalue metadb_journal_dir`
+    : ${METADATA_JOURNAL_DIR:="$METADATA_JOURNAL_DIR1"}
+    : ${METADATA_JOURNAL_DIR:="$METADATA_JOURNAL_DIR0"}
+    : ${METADATA_JOURNAL_DIR:="/var/gfarm-metadata/journal"}
 }
 
 #
@@ -154,6 +160,8 @@ update_first_set_param()
 #
 
 : ${BACKEND_OPTIONS:=}
+: ${METADATA_REPLICATION:=false}
+: ${METADATA_REPLICATION_ED:=disable}
 
 while [ $# -gt 0 ] ; do
 	case $1 in
@@ -187,7 +195,7 @@ while [ $# -gt 0 ] ; do
 		;;
 	  -r)
 		METADATA_REPLICATION=true
-		METADATA_REPLICATION_ED=disable
+		METADATA_REPLICATION_ED=enable
 		;;
 	  --update|--update-symlink) 
 		UPDATE=true
@@ -262,18 +270,6 @@ update_sanity || ABORT "aborted"
 $DISPLAY_PARAMS && display_params
 
 update_postprocess_$BACKEND_TYPE || ABORT "aborted"
-
-# for replication
-if $METADATA_REPLICATION; then
-	if [ ! $METADATA_REPLICATION0 ]; then
-		echo "metadb_replication $METADATA_REPLICATION_ED" >> $GFMD_CONF
-	fi
-	if [ "$METADATA_JOURNAL_DIR0" != "$METADATA_JOURNAL_DIR" ]; then
-		echo "metadb_journal_dir $METADATA_JOURNAL_DIR" >> $GFMD_CONF
-		-d $METADATA_JOURNAL_DIR || mkdir -p $METADATA_JOURNAL_DIR
-		-e $METADATA_JOURNAL_DIR && chmod 700 $METADATA_JOURNAL_DIR
-	fi
-fi
 
 #
 if $UPDATE; then
