implement #229 - It's desired to stop gfmd's periodic waking up. by using a socketpair to watch when descriptors' status is changed. this implementation uses multiple watcher threads to prevent clients from blocking back channels and gfmd channels.

--- a/gfarm_v2/trunk/regress/server/gfmd/db_journal/Makefile
+++ b/gfarm_v2/trunk/regress/server/gfmd/db_journal/Makefile
@@ -48,6 +48,7 @@ SRCS = \
 	$(GFMD_SRCDIR)/subr.c \
 	$(GFMD_SRCDIR)/thrpool.c \
 	$(GFMD_SRCDIR)/user.c \
+	$(GFMD_SRCDIR)/watcher.c \
 	$(GFMD_SRCDIR)/xattr.c \
 	db_journal_apply_test.c empty_ops.c
 
@@ -76,6 +77,7 @@ OBJS =	\
 	$(GFMD_BUILDDIR)/subr.o \
 	$(GFMD_BUILDDIR)/thrpool.o \
 	$(GFMD_BUILDDIR)/user.o \
+	$(GFMD_BUILDDIR)/watcher.o \
 	$(GFMD_BUILDDIR)/xattr.o \
 	db_journal_test.o empty_ops.o
 
@@ -107,6 +109,7 @@ $(OBJS): $(DEPGFARMINC) \
 	$(GFMD_SRCDIR)/subr.h \
 	$(GFMD_SRCDIR)/rpcsubr.h \
 	$(GFMD_SRCDIR)/callout.h \
+	$(GFMD_SRCDIR)/watcher.h \
 	$(GFMD_SRCDIR)/user.h \
 	$(GFMD_SRCDIR)/group.h \
 	$(GFMD_SRCDIR)/host.h \
