Install Debian Installation Document

--- a/gfarm_v2/trunk/doc/Makefile
+++ b/gfarm_v2/trunk/doc/Makefile
@@ -10,6 +10,7 @@ DOC =	../LICENSE ../RELNOTES \
 	../README.en ../README.ja ../OVERVIEW.en ../OVERVIEW.ja \
 	../INSTALL.en ../INSTALL.ja  \
 	../INSTALL.RPM.en ../INSTALL.RPM.ja \
+	../INSTALL.Debian.en ../INSTALL.Debian.ja \
 	../SETUP.en ../SETUP.ja SETUP.private.en SETUP.private.ja \
 	Gfarm-FAQ.en Gfarm-FAQ.ja \
 	KNOWN_PROBLEMS.en KNOWN_PROBLEMS.ja
