install redundancy tutorial in English

--- a/gfarm_v2/trunk/doc/html/en/user/Makefile
+++ b/gfarm_v2/trunk/doc/html/en/user/Makefile
@@ -10,7 +10,8 @@ htmldir=$(default_htmldir)/en/user
 
 HTML =	index.html \
 	nfs-gfarmfs.html \
-	samba-gfarmfs.html
+	samba-gfarmfs.html \
+	redundancy-tutorial.html
 # XXX not translated yet
 #	export-gfarm.html \
 #	samba-hook.html
