do not install old documents

--- a/gfarm_v2/trunk/doc/html/en/user/Makefile
+++ b/gfarm_v2/trunk/doc/html/en/user/Makefile
@@ -9,11 +9,10 @@ include $(top_srcdir)/makes/var.mk
 htmldir=$(default_htmldir)/en/user
 
 HTML =	index.html \
-	nfs-gfarmfs.html \
 	samba-gfarmfs.html \
 	redundancy-tutorial.html
-# XXX not translated yet
-#	export-gfarm.html \
+#	export-gfarm.html
+#	nfs-gfarmfs.html
 #	samba-hook.html
 
 include $(top_srcdir)/makes/html.mk
