fix the following warning on Solaris 9: {{{ gfsd.c:759: warning: implicit declaration of function `ctime_r' }}}

--- a/gfarm_v2/trunk/server/gfsd/Makefile
+++ b/gfarm_v2/trunk/server/gfsd/Makefile
@@ -7,7 +7,9 @@ srcdir = .
 include $(top_srcdir)/makes/var.mk
 include $(srcdir)/../Makefile.inc
 
-CFLAGS = $(COMMON_CFLAGS) -I$(GFUTIL_SRCDIR) -I$(GFARMLIB_SRCDIR) \
+# $(pthread_includes): ctime_r() needs -D_POSIX_PTHREAD_SEMANTICS on Solaris
+CFLAGS = $(pthread_includes) $(COMMON_CFLAGS) \
+	-I$(GFUTIL_SRCDIR) -I$(GFARMLIB_SRCDIR) \
 	$(openssl_includes) \
 	-DGFARM_DEFAULT_BINDIR=\"$(default_bindir)\"
 LDLIBS = $(COMMON_LDFLAGS) $(GFARMLIB) $(LIBS)
