add wrapper functions for pthread_barrier_t related features, these functions are expected to be used from regress/server/gfmd/db_journal/db_journal_test.c, as part of fix to #239 - regress/server/gfmd/db_journal/db_journal_write.sh hangs on a 2-core CPU machine with FreeBSD 8.2

--- a/gfarm_v2/trunk/configure.ac
+++ b/gfarm_v2/trunk/configure.ac
@@ -1119,7 +1119,7 @@ fi
 ###### Checks for library functions.
 ######
 
-AC_CHECK_FUNCS(getdents fdatasync fdopendir poll pread pwrite snprintf getpassphrase mkdtemp setlogin strtoll strtoq setrlimit daemon getloadavg statvfs statfs random getifaddrs getopt_long)
+AC_CHECK_FUNCS(getdents fdatasync fdopendir poll pread pwrite snprintf getpassphrase mkdtemp setlogin strtoll strtoq setrlimit daemon getloadavg statvfs statfs random getifaddrs getopt_long pthread_barrier_wait)
 
 ### Check epoll_create really implemented
 
