implement #248 - gfstat -M option to show corresponding metadata server information

--- a/gfarm_v2/trunk/gftool/gfstat/Makefile
+++ b/gfarm_v2/trunk/gftool/gfstat/Makefile
@@ -19,4 +19,6 @@ include $(top_srcdir)/makes/prog.mk
 
 ###
 
-$(OBJS): $(DEPGFARMINC)
+$(OBJS): $(DEPGFARMINC) \
+	$(GFARMLIB_SRCDIR)/gfm_client.h \
+	$(GFARMLIB_SRCDIR)/lookup.h
