To suppress warnings output by 'configu.status', define the 'datarootdir' variable.

--- a/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm.in
@@ -8,7 +8,9 @@ PROGNAME=`basename $0`
 # Gfarm installation directory
 prefix="@prefix@"
 sysconfdir="@sysconfdir@"
-config_dir="@datadir@/gfarm/config"
+datarootdir="@datarootdir@"
+datadir="@datadir@"
+config_dir="${datadir}/gfarm/config"
 globus_location="@globus_location@"
 
 #
