--- a/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
@@ -11,7 +11,9 @@ unset LANG
 # Gfarm installation directory
 prefix="@prefix@"
 sysconfdir="@sysconfdir@"
-config_dir="@datadir@/gfarm/config"
+datarootdir="@datarootdir@"
+datadir="@datadir@"
+config_dir="${datadir}/gfarm/config"
 
 PATH="${prefix}/bin:${prefix}/sbin:/bin:/usr/bin:/sbin:/usr/sbin:/usr/ucb:/usr/pkg/bin:/usr/pkg/sbin:/usr/local/bin:/usr/local/sbin:$PATH"
 export PATH
