Use the new 'makes/build-script' utility to generate 'config-gfarm', 'config-gfarm-update', 'config-gsd' and  'gfdump.postgresql' scripts from '*.in' template files.
Developers don't have to execute 'configure' to update the scripts
any longer.  Type 'make' instead.

--- a/gfarm_v2/trunk/configure.ac
+++ b/gfarm_v2/trunk/configure.ac
@@ -1412,10 +1412,8 @@ test -d gfptool || mkdir gfptool
 test -d package || mkdir package
 test -d util || mkdir util
 
-AC_CONFIG_FILES(Makefile makes/config.mk makes/install-doc
+AC_CONFIG_FILES(Makefile makes/config.mk makes/install-doc makes/build-script
 	${ns_makefiles}
-	gftool/config-gfarm/config-gfarm gftool/config-gfarm/config-gfsd
-	gftool/config-gfarm/config-gfarm-update gftool/gfdump/gfdump.postgresql
 	package/solaris/gfmd package/solaris/gfsd
 )
 AC_OUTPUT
