fix a problem which was introduced in clean_file_structure r5307: temporary directory for the regression test is not completely cleaned up

--- a/gfarm_v2/trunk/regress/lib/libgfarm/gfarm/gfm_inode_or_name_op_test/gfm_inode_or_name_op_test.conf
+++ b/gfarm_v2/trunk/regress/lib/libgfarm/gfarm/gfm_inode_or_name_op_test/gfm_inode_or_name_op_test.conf
@@ -119,9 +119,9 @@ setup_file_structure() {
 }
 
 clean_file_structure() {
-	gfrm -f $a1_f $a2_f $a3_f $a4_f $toC_l $toa1_l $toA_l \
+	gfrm -f $a1_f $a2_f $a3_f $a4_f $a5_f $toC_l $toa1_l $toA_l \
 		$toa2_l $toAA_l $toa3_l $toa4_l $toRoot_l \
-		$toNotExist_l $toLL_l 2>/dev/null
+		$toNotExist_l $toLL_l $toa5_l $toBB_l 2>/dev/null
 	gfrmdir $C_d $BB_d $B_d $AA_d $A_d $R_d 2> /dev/null
 }
 
