--- a/gfarm_v2/trunk/gftool/config-gfarm/sysdep/linux/debian/gfmd.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/sysdep/linux/debian/gfmd.in
@@ -29,7 +29,8 @@ case "$1" in
 	;;
   stop)
 	echo -n "Stopping gfarm server: $FILE"
-	start-stop-daemon --stop --quiet --pidfile $PIDFILE --exec $DAEMON
+	start-stop-daemon --stop --quiet --pidfile $PIDFILE \
+		--retry forever/0/1 --exec $DAEMON
 	echo "."
 	;;
   restart|force-reload)
