Define a home made assert() function and <assert.h> header file, in order to solve #278.

--- a/gfarm_v2/trunk/lib/libgfarm/gfutil/Makefile
+++ b/gfarm_v2/trunk/lib/libgfarm/gfutil/Makefile
@@ -10,6 +10,7 @@ LIBRARY = libgfutil.la
 LIBRARY_RESULT = # do not install
 
 SRCS =	alloc.c \
+	assert.c \
 	daemon.c \
 	gfevent.c \
 	gfnetdb.c \
@@ -26,6 +27,7 @@ SRCS =	alloc.c \
 	timer.c \
 	timeval.c
 OBJS =	alloc.lo \
+	assert.lo \
 	daemon.lo \
 	gfevent.lo \
 	gfnetdb.lo \
