add testcase for gfmd connection failover in gf_pio fuctions.

--- a/gfarm_v2/trunk/regress/manual/lib/libgfarm/gfarm/gfs_pio_failover/Makefile
+++ b/gfarm_v2/trunk/regress/manual/lib/libgfarm/gfarm/gfs_pio_failover/Makefile
@@ -4,7 +4,7 @@ srcdir = .
 
 include $(top_srcdir)/makes/var.mk
 
-PROGRAM = gfs_pio_stat_failover
+PROGRAM = gfs_pio_failover_test
 SRCS = $(PROGRAM).c
 OBJS = $(PROGRAM).o
 CFLAGS = $(COMMON_CFLAGS) -I$(GFARMLIB_SRCDIR)
