--- a/gfarm_v2/trunk/bench/gfperf/gfperf-rb/config.yml
+++ b/gfarm_v2/trunk/bench/gfperf/gfperf-rb/config.yml
@@ -8,42 +8,42 @@ metadata: [ {testdir: "gfarm:///tmp", number: "250"},
 tree: [ {testdir: "gfarm:///tmp", width: "5", depth: "3"},
         {testdir: "file:///mnt/gfarm2fs/tmp", width: "5", depth: "3"} ]
 copy: [
-   {src: "file:///tmp", dst: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
-   {src: "gfarm:///tmp", dst: "file:///tmp", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
+   {src: "file:///tmp", dst: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
+   {src: "gfarm:///tmp", dst: "file:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
    {src: "file:///tmp", dst: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"},
    {src: "gfarm:///tmp", dst: "file:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"},
-   {src: "file:///tmp", dst: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp", gfarm2fs: "/mnt/gfarm2fs"},
-   {src: "gfarm:///tmp", dst: "file:///tmp", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp", gfarm2fs: "/mnt/gfarm2fs"},
+   {src: "file:///tmp", dst: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local", gfarm2fs: "/mnt/gfarm2fs"},
+   {src: "gfarm:///tmp", dst: "file:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local", gfarm2fs: "/mnt/gfarm2fs"},
    {src: "file:///tmp", dst: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local", gfarm2fs: "/mnt/gfarm2fs"},
    {src: "gfarm:///tmp", dst: "file:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local", gfarm2fs: "/mnt/gfarm2fs"}
       ]
 read: [
-   {testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
+   {testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
    {testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"},
-   {testdir: "gfarm:///tmp", random: "true", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
+   {testdir: "gfarm:///tmp", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
    {testdir: "gfarm:///tmp", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"},
-   {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
+   {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
    {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"},
-   {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", random: "true", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
+   {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
    {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"}
       ]
 write: [
-   {testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
+   {testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
    {testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"},
-   {testdir: "gfarm:///tmp", random: "true", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
+   {testdir: "gfarm:///tmp", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
    {testdir: "gfarm:///tmp", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"},
-   {testdir: "gfarm:///tmp", overwrite: "true", random: "true", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
+   {testdir: "gfarm:///tmp", overwrite: "true", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
    {testdir: "gfarm:///tmp", overwrite: "true", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"},
-   {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
+   {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
    {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"},
-   {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", random: "true", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
+   {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
    {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"},
-   {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", overwrite: "true", random: "true", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
+   {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", overwrite: "true", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
    {testdir: "gfarm:///tmp", gfarm2fs: "/mnt/gfarm2fs", overwrite: "true", random: "true", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"}
       ]
 replica: [
-   {testdir: "gfarm:///tmp", src: "pet100.soum.co.jp", dst: "gfsd1.local", filesize: "1M"},
-   {testdir: "gfarm:///tmp", src: "gfsd1.local", dst: "pet100.soum.co.jp", filesize: "1M"}
+   {testdir: "gfarm:///tmp", src: "gfsd0.local", dst: "gfsd1.local", filesize: "1M"},
+   {testdir: "gfarm:///tmp", src: "gfsd1.local", dst: "gfsd0.local", filesize: "1M"}
 	 ]
 autoreplica: [
    {testdir: "gfarm:///tmp", filesize: "1M", number: "10", duplicate: "1"},
@@ -53,16 +53,16 @@ autoreplica: [
 	 ]
 parallel: {
   group1: [
-   {rhost: "pet100.soum.co.jp", type: "read", testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
-   {rhost: "pet100.soum.co.jp", type: "read", testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"}
+   {rhost: "gfsd0.local", type: "read", testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
+   {rhost: "gfsd0.local", type: "read", testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"}
         ],
   group2: [
-   {rhost: "pet100.soum.co.jp", type: "write", testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "pet100.soum.co.jp"},
-   {rhost: "pet100.soum.co.jp", type: "write", testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"}
+   {rhost: "gfsd0.local", type: "write", testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd0.local"},
+   {rhost: "gfsd0.local", type: "write", testdir: "gfarm:///tmp", filesize: "1M", bufsize: "4K", gfsd: "gfsd1.local"}
        ],
   group3: [
-   {type: "replica", testdir: "gfarm:///tmp", src: "pet100.soum.co.jp", dst: "gfsd1.local", filesize: "1M"},
-   {type: "replica", testdir: "gfarm:///tmp", src: "gfsd1.local", dst: "pet100.soum.co.jp", filesize: "1M"}
+   {type: "replica", testdir: "gfarm:///tmp", src: "gfsd0.local", dst: "gfsd1.local", filesize: "1M"},
+   {type: "replica", testdir: "gfarm:///tmp", src: "gfsd1.local", dst: "gfsd0.local", filesize: "1M"}
        ]
 }
 parallel-autoreplica: {
