support private mode in debian

--- a/gfarm_v2/trunk/gftool/config-gfarm/sysdep/linux/debian/gfarm-pgsql.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/sysdep/linux/debian/gfarm-pgsql.in
@@ -42,6 +42,18 @@ checkstatus()
 	return $RETVAL
 }
 
+wait_to_start()
+{
+	iter=0
+	# XXX - checkstatus cannot ensure the database really starts up
+	while if checkstatus; then false; else true; fi >/dev/null 2>&1
+	do
+		iter=`expr $iter + 1`
+		[ $iter -gt 6 ] && exit 1
+		sleep 5
+	done
+}
+
 RETVAL=0
 
 case "$1" in
@@ -53,6 +65,7 @@ case "$1" in
 		call_pg_ctl start
 		RETVAL=$?
 	fi
+	wait_to_start
 	echo "."
 	;;
   stop)
