Gfarm metadata benchmark - This benchmark can access to gfmd in parallel.

--- a/gfarm_v2/trunk/bench/Makefile
+++ b/gfarm_v2/trunk/bench/Makefile
@@ -9,6 +9,7 @@ SUBDIRS = \
 	nconnect \
 	thput-fsstripe \
 	thput-fsys \
-	thput-gfpio
+	thput-gfpio \
+	gfiops
 
 include $(top_srcdir)/makes/subdir.mk
