fix the following syntax errors since r5685 (for #302 - private mode cannot be set up on debian and ubuntu),  * $PRIVATE_MODE and $PRIVATE_MODE_FOR_DEBIAN have to be set before loading config-gfarm.$BACKEND_TYPE since then.  * a syntax error in set_last_defaults_postgresql()  * a syntax error in sanity() in config-gfarm.in, this is since r5401

--- a/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm.in
@@ -29,6 +29,9 @@ if [ -z "$backend_default" ]; then
 fi
 BACKEND_TYPE=$backend_default
 
+PRIVATE_MODE=false
+PRIVATE_MODE_FOR_DEBIAN=false
+
 #
 #
 #
@@ -178,8 +181,11 @@ service_start_common()
 
 sanity()
 {
-	if [ $METADATA_REPLICATION -a ! $PRIVATE_MODE ]; then
-		if id _gfarmmd >/dev/null 2>&1; then :
+	if $METADATA_REPLICATION; then
+		if $PRIVATE_MODE; then
+			:
+		elif id _gfarmmd >/dev/null 2>&1; then
+			:
 		else
 			echo "error: user _gfarmmd is not registered."
 			return 1
@@ -383,7 +389,6 @@ set_first_defaults_$BACKEND_TYPE
 # sysdep_defaults must set: $RC_DIR
 sysdep_defaults
 
-: ${PRIVATE_MODE:=false}
 : ${START_SERVICE:=true}
 : ${FORCE:=false}
 : ${DISPLAY_PARAMS:=false}
