--- a/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
@@ -15,6 +15,9 @@ datarootdir="@datarootdir@"
 datadir="@datadir@"
 config_dir="${datadir}/gfarm/config"
 
+PRIVATE_MODE=false
+PRIVATE_MODE_FOR_DEBIAN=false
+
 PATH="${prefix}/bin:${prefix}/sbin:/bin:/usr/bin:/sbin:/usr/sbin:/usr/ucb:/usr/pkg/bin:/usr/pkg/sbin:/usr/local/bin:/usr/local/sbin:$PATH"
 export PATH
 search_path="$PATH"
