--- a/gfarm_v2/trunk/makes/config.mk.in
+++ b/gfarm_v2/trunk/makes/config.mk.in
@@ -49,6 +49,8 @@ INSTALL_DOC = sh $(top_builddir)/makes/install-doc
 
 LIBS = @LIBS@ $(pthread_libs)
 
+dynamic_ldflags = @dynamic_ldflags@
+
 largefile_cflags = @largefile_cflags@
 largefile_ldflags = @largefile_ldflags@
 # `getconf LFS_LIBS` is already added to $(LIBS)
