--- a/gfarm_v2/trunk/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/trunk/include/gfarm/gfarm_config.h.in
@@ -11,6 +11,9 @@
 /* support XML extended attributs and searching by XPath */
 #undef ENABLE_XMLATTR
 
+/* Define to 1 if you have the `backtrace_symbols' function. */
+#undef HAVE_BACKTRACE_SYMBOLS
+
 /* Define to 1 if you have the <byteswap.h> header file. */
 #undef HAVE_BYTESWAP_H
 
@@ -37,6 +40,9 @@
 
 /* Define to 1 if epoll functions are implemented. */
 #undef HAVE_EPOLL
+
+/* Define to 1 if you have the <execinfo.h> header file. */
+#undef HAVE_EXECINFO_H
 
 /* Define to 1 if you have the `fdatasync' function. */
 #undef HAVE_FDATASYNC
