--- a/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
@@ -95,12 +95,10 @@ display_backend_log_dir_param()
 
 tf2yn()
 {
-    tf=$1
-    if [ "$tf" = "true" ]; then
-        echo "yes"
-    else
-        echo "no"
-    fi
+    case $1 in
+    true) echo yes;;
+    *)    echo no;;
+    esac
 }
 
 display_params()
@@ -134,10 +132,10 @@ update_metadata_replication()
         [ -e $METADATA_JOURNAL_DIR ] && chmod 700 $METADATA_JOURNAL_DIR
     fi
 
-    if [ "$METADATA_REPLICATION_ED1" = "" ]; then
+    if [ X"$METADATA_REPLICATION_ED1" = X"" ]; then
         echo "metadb_replication $METADATA_REPLICATION_ED" >> $GFMD_CONF
     fi
-    if [ "$METADATA_JOURNAL_DIR1" = "" ]; then
+    if [ X"$METADATA_JOURNAL_DIR1" = X"" ]; then
         echo "# mkdir following directory when metadb_replication is set to enable." >> $GFMD_CONF
         echo "metadb_journal_dir $METADATA_JOURNAL_DIR" >> $GFMD_CONF
     fi
@@ -146,7 +144,7 @@ update_metadata_replication()
 update_first_set_param()
 {
     : ${METADATA_REPLICATION_ED1=`getvalue metadb_replication`}
-    if [ "$METADATA_REPLICATION_ED1" = "enable" ]; then
+    if [ X"$METADATA_REPLICATION_ED1" = X"enable" ]; then
         METADATA_REPLICATION=true
         METADATA_REPLICATION1=true
         METADATA_REPLICATION_ED=enable
