fix Makefile. use makes/script.mk to install script files.

--- a/gfarm_v2/trunk/bench/gfperf/gfperf-rb/Makefile
+++ b/gfarm_v2/trunk/bench/gfperf/gfperf-rb/Makefile
@@ -6,12 +6,6 @@ srcdir = .
 
 include $(top_srcdir)/makes/var.mk
 
-CFLAGS = 
-LDLIBS = 
+SCRIPTS = $(srcdir)/gfperf.rb
 
-PROGRAM = gfperf.rb
-OBJS = 
-
-all: $(PROGRAM)
-
-include $(top_srcdir)/makes/prog.mk
+include $(top_srcdir)/makes/script.mk
